# bible-reading-progress

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bible_structure.json  knope.toml
.changeset/: initial-release.md
.github/workflows/: release.yml
notebooks/: build-chapter-lengths.ipynb  pyproject.toml
src/: bible_structure.rs  config.rs  lib.rs  main.rs  main_2.rs  progress.rs  range_query.rs  utils.rs
src/widgets/: dashboard.rs  manual_add.rs  mod.rs  record.rs  tree_builder.rs
