[package]
name = "bible-reading-progress"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["J. Simon Richard <jsimonrichard@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
tui-tree-widget = "0.23.1"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "brp"
path = "src/main.rs"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
